<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".beginner">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/caveat_brush"
        android:gravity="center"
        android:text="YOU SHOULD LEARN"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/book" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/caveat_brush"
                android:gravity="center"
                android:text="LANGUAGE"
                android:textAlignment="center"
                android:textColor="#050505"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="[1] C\n[2] C++"
                android:textColor="#050505"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/code" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/caveat_brush"
                android:gravity="center"
                android:text="IDEs/Compilers"
                android:textColor="#050505"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/codeblock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/codeblock"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vscode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/vscode"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/code" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/caveat_brush"
                android:gravity="center"
                android:text="Online IDEs"
                android:textColor="#050505"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/OnlineGDB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/OnlineGDB"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Programiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/Programiz"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ideone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/ideone"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/computer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/caveat_brush"
                android:gravity="center"
                android:text="Online Judges"
                android:textColor="#050505"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/codeforces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/codeforses"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TopCoder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/topcoder"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/uva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/uva"
                android:textColor="#050505"
                android:textColorHighlight="#FFD000"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>